@@ -1,0 +1,39 @@
+[[server-info]]
+== Server Information
+
+The APM Server exposes an API endpoint to query some server information.
+
+[[server-info-endpoint]]
+[float]
+=== Server Information endpoint
+Send an `HTTP GET` request to the server information endpoint:
+
+[source,bash]
+------------------------------------------------------------
+http(s)://{hostname}:{port}/
+------------------------------------------------------------
+
+This endpoint always returns an HTTP 200.
+
+If a <<secret-token, secret token>> is set, only requests including <<config-secret-token, authentication>> will include server details.
+
+Set the `Content-Type` header set to `text/plain` to move the server information to the root level of the response, removing `ok`.
+
+[[server-info-examples]]
+[float]
+==== Example
+
+Example server information request:
+
+["source","sh",subs="attributes"]
+---------------------------------------------------------------------------
+curl http://127.0.0.1:8200/
+
+{
+  "ok": {
+    "build_date": "2018-07-27T18:49:58Z",
+    "build_sha": "bc4d9a286a65b4283c2462404add86a26be61dca",
+    "version": "7.0.0-alpha1"
+  }
+}
+---------------------------------------------------------------------------
