@@ -12,6 +12,8 @@ https://github.com/elastic/apm-server/compare/6.4\...master[View commits]
 [float]
 === Added
 
+- Provide basic server information at `/` {pull}1197[1197]
+
 [[release-notes-6.4]]
 == APM Server version 6.4
 
